--- a/front/package.json
+++ b/front/package.json
@@ -5,8 +5,7 @@
   "main": "gulpfile.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./node_modules/.bin/gulp"
+    "dev": "gulp"
   },
   "keywords": [],
   "author": "",
